# WateringSys

./: README.md
Django_side/: pyproject.toml
Django_side/TEMPapp/: admin.py  models.py  serializers.py  views.py
Django_side/TEMPapp/migrations/: 0003_pumpingvaluemodel.py
Django_side/TEMPapp/static/css/: custom.css
Django_side/TEMProject/: settings.py
Django_side/templates/: home.html
ESP_side/: ESP32_pump_soll_oled.ino
TEMPapp/: forms.py  urls.py  views.py
TEMPapp/migrations/: 0001_initial.py  0002_csmsmodel_delete_dht11model.py
templates/: CSMSview.html
